correction mobile carousel

--- a/src/styles/components/scrollbox.module.scss
+++ b/src/styles/components/scrollbox.module.scss
@@ -52,3 +52,8 @@
   display: flex;
   gap: 3px;
 }
+@media screen and (max-width: 1394px) {
+  .box{
+    gap:24px;
+  }
+}
